--- a/Prototype/Pages/Interview.html
+++ b/Prototype/Pages/Interview.html
@@ -154,10 +154,13 @@
   <h2><b>During Interview</b></h2>
   <a href="#demo2" class="btn btn-warning" data-toggle="collapse">Click to View</a>
   <div id="demo2" class="collapse">
-    <i class="glyphicon glyphicon-check"></i> Dress professionally. <br>
-
-    <i class="glyphicon glyphicon-check"></i> First Impressions matter. <br>
-
+   <i class="glyphicon glyphicon-check"></i> Dress professionally. <br>
+   <i class="glyphicon glyphicon-check"></i> First Impressions matter. <br>
+	 <i class="glyphicon glyphicon-check"></i> Speak calmly and clearly. <br>
+	 <i class="glyphicon glyphicon-check"></i> Make eyecontact and show that you are engaged in the conversation. <br>
+	 <i class="glyphicon glyphicon-check"></i> Be calm during technical questions. <br>
+	 <i class="glyphicon glyphicon-check"></i> Have questions ready to ask. <br>
+	
   </div>
 </div>
 
@@ -166,10 +169,9 @@
   <a href="#demo3" class="btn btn-success" data-toggle="collapse">Click to View</a>
   <div id="demo3" class="collapse">
     <i class="glyphicon glyphicon-check"></i> Write up a follow up E-mail.<br>
-
+	  <i class="glyphicon glyphicon-check"></i> Give the recruiter time to get back to you.<br>
+	  <i class="glyphicon glyphicon-check"></i> If the recruiter is more than a week late in responding, send them a follow up email. <br>
     <i class="glyphicon glyphicon-check"></i> Relax, and don't stress about the decision until they give one.<br>
-
-
 
   </div>
 </div>
